2008-01-16  Christian Persch  <chpe@gnome.org>

	* gtk/gtkwidget.c: Store the event mask and extension event mode
	directly in the gobject data pointer, instead of in an allocated
	gint. Bug #506604.

2008-01-16  Michael Natterer  <mitch@imendio.com>

	* configure.in (GDK_PIXBUF_PACKAGES): add "gio-2.0" because
	gdk-pixbuf now uses gio functions.

2008-01-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_set_model): Emit
	the notify::model signal.  (#509819, David Zeuthen)

2008-01-15  Michael Natterer  <mitch@imendio.com>

	* gdk/gdkdisplay.h
	* gdk/gdkdrawable.h
	* gdk/gdkevents.h
	* gdk/gdkpango.h
	* gdk/gdkregion.h
	* gdk/gdkrgb.h
	* gdk/gdkwindow.h: made more struct pointer and array parameters
	const. GDK should now be constified as far as possible without
	breaking source compatibility. Includes some minor cleanup like
	indentation and s/nfoo/n_foo/ (bug #508544).

	* gdk/gdkdisplay.c
	* gdk/gdkdraw.c
	* gdk/gdkevents.c
	* gdk/gdkpango.c
	* gdk/gdkregion-generic.c
	* gdk/gdkrgb.c
	* gdk/directfb/gdkdisplay-directfb.c
	* gdk/directfb/gdkwindow-directfb.c
	* gdk/quartz/gdkdisplay-quartz.c
	* gdk/quartz/gdkwindow-quartz.c
	* gdk/win32/gdkdisplay-win32.c
	* gdk/win32/gdkwindow-win32.c
	* gdk/x11/gdkdisplay-x11.c
	* gdk/x11/gdkwindow-x11.c: changed accordingly.

2008-01-14  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkrc.c (_gtk_rc_style_unset_rc_property): add cast to fix
	const warning.

	(gtk_rc_parse_any): change variables to const and introduce
	another local variable to fix const warnings.

2008-01-14  Michael Natterer  <mitch@imendio.com>

	* gdk/gdkscreen.c (gdk_screen_get_property): cast the return value
	of gdk_screen_get_font_options() to gpointer to get rid of const
	warning.

2008-01-14  Michael Natterer  <mitch@imendio.com>

	* tests/testdnd.c (source_drag_data_get): fix another call to
	gtk_selection_data_set().

2008-01-14  Michael Natterer  <mitch@imendio.com>
